--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,16 +14,18 @@ description: A new Flutter project.
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: ">=2.2.2 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
   provider: ^6.0.5
+  badges: ^3.1.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.5
+  intl: ^0.18.1
 
 dev_dependencies:
   flutter_test:
