--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,12 +20,12 @@ dependencies:
   flutter:
     sdk: flutter
   provider: ^6.0.5
-  badges: ^3.1.1
+  intl: ^0.18.1
+  http: ^0.13.5
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.5
-  intl: ^0.18.1
 
 dev_dependencies:
   flutter_test:
